--- a/dotfiles/.config/waybar/config.jsonc
+++ b/dotfiles/.config/waybar/config.jsonc
@@ -7,7 +7,7 @@
     "hyprland/workspaces": {
         "format": "{icon}",
         "format-icons": {
-            "default": "",
+            "default": "",
             "active": ""
         },
         "persistent_workspaces": {
