ref(hyprland)!: Use fullscreen instead of tabgroup
- Setup hotkey mainMod + m for fullscreen (hides top bar)

BREAKING CHANGE: mainMod + t & mainMod + tab will no longer be available
for create & navigating tab groups. Instead mainMod + m can be used to
go into fullscreen layout & window navigation can be used to navigate
between windows

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -77,8 +77,7 @@ $mainMod = SUPER
 bind = $mainMod, Q, killactive,
 bind = $mainMod, F, exec, rofi -show drun -show-icons
 bind = $mainMod, E, exec, nautilus
-bind = $mainMod SHIFT, T, togglegroup,
-bind = $mainMod, TAB, changegroupactive, f
+bind = $mainMod, M, fullscreen, 0
 
 # window navigation
 bind = $mainMod, H, movefocus, l
