feat: Setup screenshots using grimblast
- Screenshots will be copied to clipboard
- Screenshots will be saved under ~/Pictures/screenshots/
- Setup Super+p (full) & Super+Shift+p (area) as screenshot keybinds

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -123,6 +123,10 @@ bind =, XF86AudioPlay, exec, playerctl play-pause
 bind =, XF86AudioNext, exec, playerctl next 
 bind =, XF86AudioPrev, exec, playerctl previous
 
+# screenshot bindings
+bind = SUPER, p, exec, XDG_SCREENSHOTS_DIR="$HOME/Pictures/screenshots" grimblast --notify copysave screen
+bind = SUPER SHIFT, p, exec, XDG_SCREENSHOTS_DIR="$HOME/Pictures/screenshots" grimblast --notify copysave area
+
 # for rules ref: https://wiki.hyprland.org/Configuring/Window-Rules/#rules
 # fix download dialogs going off screen
 windowrulev2=size 75%,75%,class:firefox,floating:1
