--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -128,6 +128,7 @@ bind = SUPER, p, exec, XDG_SCREENSHOTS_DIR="$HOME/Pictures/screenshots" grimblas
 bind = SUPER SHIFT, p, exec, XDG_SCREENSHOTS_DIR="$HOME/Pictures/screenshots" grimblast --notify copysave area
 
 # for rules ref: https://wiki.hyprland.org/Configuring/Window-Rules/#rules
+# for window class, names, etc. run `hyprctl clients` when the window is open
 # fix download dialogs going off screen
 windowrulev2=size 75%,75%,class:firefox,floating:1
 windowrulev2=center,class:firefox,floating:1
@@ -135,6 +136,11 @@ windowrulev2=center,class:firefox,floating:1
 # float polkit window in center
 windowrulev2=float,class:lxqt-policykit-agent
 windowrulev2=center,class:lxqt-policykit-agent
+
+# float bluetooth window in center
+windowrulev2=float,class:.blueman-manager-wrapped
+windowrulev2=size 75%,75%,class:.blueman-manager-wrapped
+windowrulev2=center,class:.blueman-manager-wrapped
 
 # lockscreen
 exec-once = ~/projects/dotfiles/setup/swaylock.sh
