fix!: Install blueman 2.4.3 from unstable channel
- Bluetooth device was notifying for each 1% drop in battery
- In v2.4.1 connection notifier plugin relayed all of these as-is
- In v2.4.3 bluetooth notifications are only sent on connection &
  disconnection

BREAKING: We can no longer depend on old behaviour where a notification
is sent for drop in battery.

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -138,9 +138,9 @@ windowrulev2=float,class:lxqt-policykit-agent
 windowrulev2=center,class:lxqt-policykit-agent
 
 # float bluetooth window in center
-windowrulev2=float,class:.blueman-manager-wrapped
-windowrulev2=size 75%,75%,class:.blueman-manager-wrapped
-windowrulev2=center,class:.blueman-manager-wrapped
+windowrulev2=float,class:.blueman-*
+windowrulev2=size 75%,75%,class:.blueman-*
+windowrulev2=center,class:.blueman-*
 
 # lockscreen
 exec-once = ~/projects/dotfiles/setup/swaylock.sh
