feat(hyprland): Blur notifications
- Increase blur pasess in hyprland from 1 -> 2

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -38,7 +38,7 @@ decoration {
     blur {
         enabled = true
         size = 3
-        passes = 1
+        passes = 2
         
         vibrancy = 0.1696
     }
@@ -141,6 +141,12 @@ windowrulev2=center,class:lxqt-policykit-agent
 windowrulev2=float,class:.blueman-*
 windowrulev2=size 75%,75%,class:.blueman-*
 windowrulev2=center,class:.blueman-*
+
+# layer rules
+# ref: https://wiki.hyprland.org/Configuring/Window-Rules/#layer-rules
+# blur notifications
+layerrule = blur, notifications
+layerrule = ignorezero, notifications
 
 # lockscreen
 exec-once = ~/projects/dotfiles/setup/swaylock.sh
