--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -25,5 +25,10 @@ bind -n M-l select-pane -R
 # don't source .bash_profile
 set-option -g default-command "bash"
 
+# fixes from neovim healthcheck
+set-option -sa terminal-features ',xterm-kitty:RGB'
+set-option -sg escape-time 10
+set-option -g focus-events on
+
 # integrate tmuxer
 bind-key f display-popup -E "bash -c 'source ~/.bashrc; tmuxer'"
