fix(hyprland): Keep 4 fixed workspaces

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -70,6 +70,12 @@ misc {
     force_default_wallpaper = 0
 }
 
+# persistent workspaces
+workspace = 1, persistent:true
+workspace = 2, persistent:true
+workspace = 3, persistent:true
+workspace = 4, persistent:true
+
 # keybindings
 $mainMod = SUPER
 
