fix(hyprland): Float and center network manager window

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -148,6 +148,11 @@ windowrulev2=float,class:.blueman-*
 windowrulev2=size 75%,75%,class:.blueman-*
 windowrulev2=center,class:.blueman-*
 
+# float and center network manager
+windowrulev2=float,class:nm-connection-editor
+windowrulev2=size 75%,75%,class:nm-connection-editor
+windowrulev2=center,class:nm-connection-editor
+
 # layer rules
 # ref: https://wiki.hyprland.org/Configuring/Window-Rules/#layer-rules
 # blur notifications
