fix(hyprland): Add gap and thicker borders to scratch workspace

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -159,5 +159,10 @@ windowrulev2=center,class:nm-connection-editor
 layerrule = blur, notifications
 layerrule = ignorezero, notifications
 
+# workspace rules
+# ref: https://wiki.hyprland.org/Configuring/Workspace-Rules/
+# gaps and borders for windows in scrachpad
+workspace = special:magic, gapsout:50, gapsin:10, bordersize:2
+
 # lockscreen
 exec-once = ~/projects/dotfiles/setup/swaylock.sh
