feat(hyprlock): Change greeting on lock screen
- Change greeting to `Ahoy, Captain <User>`
- Remove invalid `font_family` config from `input-field`

--- a/dotfiles/.config/hypr/hyprlock.conf
+++ b/dotfiles/.config/hypr/hyprlock.conf
@@ -19,7 +19,6 @@ input-field {
     monitor =
     size = 200, 50
     dots_center = true
-    font_family = FiraCode
     placeholder_text =
     fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
 
@@ -29,7 +28,7 @@ input-field {
 
 label {
     monitor =
-    text = cmd[] echo "Welcome, ${USER^}" # capitalize first letter of username
+    text = cmd[] echo "Ahoy, Captain ${USER^}" # capitalize first letter of username
     text_align = center
     font_size = 25
     font_family = FiraCode
