feat: Turn on numlock at startup

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -28,6 +28,8 @@ input {
 
     sensitivity = 0
 
+    numlock_by_default = true
+
     # swap alt with super and control with capslock
     kb_options=altwin:swap_alt_win,ctrl:swapcaps
 }
