ref: Migrate from bash script to exec-once

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -1,7 +1,14 @@
 monitor=,preferred,auto,auto
 
 # top bar, notification daemon, etc.
-exec-once = ~/projects/dotfiles/setup/hyprland.sh
+exec-once = lxqt-policykit-agent
+exec-once = hyprlock
+exec-once = hypridle
+exec-once = dunst
+exec-once = blueman-applet
+exec-once = nm-applet --show-indicator
+exec-once = easyeffects --gapplication-service
+exec-once = waybar
 
 general {
     gaps_in = 0
