feat: Set dark theme for gnome apps

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -9,6 +9,7 @@ exec-once = blueman-applet
 exec-once = nm-applet --show-indicator
 exec-once = easyeffects --gapplication-service
 exec-once = waybar
+exec-once = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 
 general {
     gaps_in = 0
