feat(Hyprland): Start firefox & kitty on startup
- Start firefox on workspace 1
- Start kitty on workspace 2

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -11,6 +11,10 @@ exec-once = easyeffects --gapplication-service
 exec-once = waybar
 exec-once = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 
+# autostart apps
+exec-once = [workspace 1 silent] firefox
+exec-once = [workspace 2 silent] kitty
+
 general {
     gaps_in = 0
     gaps_out = 0
