feat: Use bibata cursor theme
- Set Bibata Ice (Modern) as the cursor theme
- Set the same theme for gnome & GTK apps through gsettings

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -1,7 +1,10 @@
 monitor=,preferred,auto,auto
 
+env = XCURSOR_SIZE, 24
+
 # top bar, notification daemon, etc.
 exec-once = lxqt-policykit-agent
+exec-once = hyprctl setcursor 'Bibata-Modern-Ice' 24
 exec-once = hyprlock
 exec-once = hypridle
 exec-once = dunst
@@ -10,6 +13,7 @@ exec-once = nm-applet --show-indicator
 exec-once = easyeffects --gapplication-service
 exec-once = waybar
 exec-once = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
+exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
 
 # autostart apps
 exec-once = [workspace 1 silent] firefox
@@ -26,8 +30,6 @@ general {
 
     allow_tearing = false
 }
-
-env = XCURSOR_SIZE,24
 
 input {
     kb_layout = us
