--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -14,6 +14,8 @@ exec-once = easyeffects --gapplication-service
 exec-once = waybar
 exec-once = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
+exec-once = gsettings set org.gnome.desktop.interface icon-theme 'Papirus-Dark'
+exec-once = gsettings set org.gnome.desktop.interface gtk-theme 'Papirus-Dark'
 
 # autostart apps
 exec-once = [workspace 1 silent] firefox
