--- a/dotfiles/.config/waybar/config.jsonc
+++ b/dotfiles/.config/waybar/config.jsonc
@@ -5,11 +5,7 @@
     "modules-right": ["idle_inhibitor", "wireplumber", "battery", "tray"],
 
     "hyprland/workspaces": {
-        "format": "{icon}",
-        "format-icons": {
-            "default": "",
-            "active": ""
-        },
+        "format": "{name}",
         "persistent_workspaces": {
             "*": 4
         }
