fix(topbar): Disable tooltip for clock, inhibitor & wireplumber

--- a/dotfiles/.config/waybar/config.jsonc
+++ b/dotfiles/.config/waybar/config.jsonc
@@ -11,20 +11,26 @@
         }
     },
 
+    "clock": {
+        "tooltip": false
+    },
+
 
     "idle_inhibitor": {
         "format": " {icon} ",
         "format-icons": {
             "activated": "󰒳",
             "deactivated": "󰒲"
-        }
+        },
+        "tooltip": false
     },
 
     "wireplumber": {
         "on-click": "easyeffects",
         "format": "{volume}% {icon}",
         "format-muted": "Mute ",
-        "format-icons": ["", "", ""]
+        "format-icons": ["", "", ""],
+        "tooltip": false
     },
 
     "battery": {
