feat(waybar)!: Change battery icons & move capacity to tooltip
- Use multiple icons to indicate current battery level while charging
- Change battery full icon to match charging icons

BREAKING: Battery percentage is no longer shown in waybar. Tooltip now
has both: the capacity & the remaining/to full time.

--- a/dotfiles/.config/waybar/config.jsonc
+++ b/dotfiles/.config/waybar/config.jsonc
@@ -34,12 +34,15 @@
     },
 
     "battery": {
-        "format": "{capacity}% {icon}",
+        "format": "{icon}",
         "format-icons": {
             "discharging": ["󰁺", "󰁺", "󰁼", "󰁽", "󰁾", "󰁾", "󰂀", "󰂀", "󰂀", "󰁹"],
-            "charging": ["󰂄"],
-            "full": ["󰁹"]
+            "charging": ["󰢜", "󰂆", "󰂇", "󰂈", "󰢝", "󰂉", "󰢞", "󰂊", "󰂋"],
+            "full": ["󰂅"]
         },
+        "format-time": "{H}h {M}m",
+        "tooltip-format-discharging": "{capacity}% ({time} left)",
+        "tooltip-format-charging": "{capacity}% ({time} to full)",
         "interval": 1,
         "states": {
             "warning": 30,
