ref(waybar): Reduce tray spacing & cleanup css
- Change border radius to 0.5rem
- Make background for workspace indicator transparent

--- a/dotfiles/.config/waybar/config.jsonc
+++ b/dotfiles/.config/waybar/config.jsonc
@@ -51,6 +51,8 @@
     },
 
     "tray": {
-        "spacing": 5
+        "spacing": 3,
+        "icon-size": 24,
+        "show-passive-items": true
     }
 }
