feat(waybar)!: Mute volume when clicking wireplumber
- Open Easyeffects when using right click

BREAKING: Easyeffects will no longer open on left-clicking wireplumber,
volume will be muted instead

--- a/dotfiles/.config/waybar/config.jsonc
+++ b/dotfiles/.config/waybar/config.jsonc
@@ -26,7 +26,10 @@
     },
 
     "wireplumber": {
-        "on-click": "easyeffects",
+        "on-click": "wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle",
+        "on-click-right": "easyeffects",
+        "on-scroll-up": "",
+        "on-scroll-down": "",
         "format": "{volume}% {icon}",
         "format-muted": "Mute ",
         "format-icons": ["", "", ""],
