ref(waybar): Change mute icon from  to 

--- a/dotfiles/.config/waybar/config.jsonc
+++ b/dotfiles/.config/waybar/config.jsonc
@@ -32,7 +32,7 @@
         "on-scroll-up": "",
         "on-scroll-down": "",
         "format": "{volume}% {icon}",
-        "format-muted": "Mute ",
+        "format-muted": "Mute ",
         "format-icons": ["", "", ""],
         "tooltip": false
     },
