feat(hyprland): Setup battery notifications
- Check battery status every second
- If battery is discharging & battery level is below 15%, send "Battery
  low" notification
- If battery is full & charging, send "Battery full" notification
- Otherwise, close the battery notification

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -12,6 +12,7 @@ exec-once = blueman-applet
 exec-once = nm-applet --show-indicator
 exec-once = easyeffects --gapplication-service
 exec-once = waybar
+exec-once = ~/.config/scripts/battery_notifier.sh
 exec-once = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
 exec-once = gsettings set org.gnome.desktop.interface icon-theme 'Papirus-Dark'
