feat: Setup 0 & full volume notifications

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -137,11 +137,11 @@ bind = , XF86MonBrightnessUp, exec, brightnessctl set +5%
 bind = SHIFT, XF86MonBrightnessUp, exec, brightnessctl set +1%
 
 # enable volume controls
-binde = , XF86AudioRaiseVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0 && wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
-binde = SHIFT, XF86AudioRaiseVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0 && wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 1%+
-binde = , XF86AudioLowerVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0 && wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%-
-binde = SHIFT, XF86AudioLowerVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0 && wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 1%-
-bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+binde = , XF86AudioRaiseVolume, exec, bash -c 'source ~/.config/scripts/volume_management.sh; increase_volume 5'
+binde = SHIFT, XF86AudioRaiseVolume, exec, bash -c 'source ~/.config/scripts/volume_management.sh; increase_volume 1'
+binde = , XF86AudioLowerVolume, exec, bash -c 'source ~/.config/scripts/volume_management.sh; decrease_volume 5'
+binde = SHIFT, XF86AudioLowerVolume, exec, bash -c 'source ~/.config/scripts/volume_management.sh; decrease_volume 1'
+bind = , XF86AudioMute, exec, bash -c 'source ~/.config/scripts/volume_management.sh; toggle_mute' 
 
 # enable media controls
 bind =, XF86AudioPlay, exec, playerctl play-pause
