--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -8,3 +8,9 @@
 	gpgSign = true
 [gpg "ssh"]
 	allowedSignersFile = /home/frankenstein/.ssh/allowed_signers
+[alias]
+	st = status
+	co = checkout
+	br = branch
+	hist = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+	undo = reset --soft HEAD~
