feat: Setup random wallpapers using hyprpaper
- Set XDG_CONFIG_HOME to ~/.config/ to prevent error when hyprpaper starts
    - Error happens as hyprpaper checks for config file in XDG_CONFIG_HOME
- Pickup wallpapers from ~/wallpapers/

fix hyprpaper

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -5,6 +5,8 @@ env = XCURSOR_SIZE, 24
 # top bar, notification daemon, etc.
 exec-once = lxqt-policykit-agent
 exec-once = hyprctl setcursor 'Bibata-Modern-Ice' 24
+exec-once = hyprpaper
+exec = ~/.config/scripts/random_wallpaper.sh
 exec-once = hyprlock
 exec-once = hypridle
 exec-once = dunst
