feat: Migrate from lxqt polkit agent -> hyprpolkitagent

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -3,7 +3,7 @@ monitor=,preferred,auto,auto
 env = XCURSOR_SIZE, 24
 
 # top bar, notification daemon, etc.
-exec-once = lxqt-policykit-agent
+exec-once = systemctl --user start hyprpolkitagent
 exec-once = hyprctl setcursor 'Bibata-Modern-Ice' 24
 exec-once = hyprpaper
 exec = ~/.config/scripts/random_wallpaper.sh
