ref: Set XDG_SCREENSHOTS_DIR for grimblast

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -145,8 +145,8 @@ bind =, XF86AudioNext, exec, playerctl next
 bind =, XF86AudioPrev, exec, playerctl previous
 
 # screenshot bindings
-bind = SUPER, p, exec, XDG_SCREENSHOTS_DIR="$HOME/Pictures/screenshots" grimblast --notify copysave screen
-bind = SUPER SHIFT, p, exec, XDG_SCREENSHOTS_DIR="$HOME/Pictures/screenshots" grimblast --notify copysave area
+bind = SUPER, p, exec, grimblast --notify copysave screen
+bind = SUPER SHIFT, p, exec, grimblast --notify copysave area
 
 # for rules ref: https://wiki.hyprland.org/Configuring/Window-Rules/#rules
 # for window class, names, etc. run `hyprctl clients` when the window is open
