feat(hyprland): Change to a random wallpaper every 30 minutes
- Move wallpapers to ~/Pictures/wallpapers/

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -6,7 +6,7 @@ env = XCURSOR_SIZE, 24
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hyprctl setcursor 'Bibata-Modern-Ice' 24
 exec-once = hyprpaper
-exec = ~/.config/scripts/random_wallpaper.sh
+exec-once = ~/.config/scripts/periodic_random_wallpaper.sh
 exec-once = hyprlock
 exec-once = hypridle
 exec-once = dunst
