fix(hyprland): Stop battery & wallpaper script on shutdown

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -19,6 +19,7 @@ exec-once = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
 exec-once = gsettings set org.gnome.desktop.interface icon-theme 'Papirus-Dark'
 exec-once = gsettings set org.gnome.desktop.interface gtk-theme 'Papirus-Dark'
+exec-shutdown = pgrep -f 'battery_notifier|periodic_random_wallpaper' | xargs kill 2>/dev/null
 
 # autostart apps
 exec-once = [workspace 1 silent] firefox
