--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -22,8 +22,8 @@ exec-once = [workspace 1 silent] firefox
 exec-once = [workspace 2 silent] kitty
 
 general {
-    gaps_in = 0
-    gaps_out = 0
+    gaps_in = 0,5,5,0 # for even spacing
+    gaps_out = 0,5,5,5 # match with waybar
     border_size = 1
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
@@ -51,13 +51,14 @@ input {
 }
 
 decoration {
-    rounding = 0
+    rounding = 5
 
     blur {
-        enabled = true
-        size = 3
-        passes = 2
-        vibrancy = 0.1696
+        enabled = false
+    }
+
+    shadow {
+        enabled = false
     }
 }
 
