feat: Update to latest `unstable` revision
- Fix deprecated hyprland config

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -149,22 +149,22 @@ bind = SUPER SHIFT, p, exec, grimblast --notify copysave area
 # for rules ref: https://wiki.hyprland.org/Configuring/Window-Rules/#rules
 # for window class, names, etc. run `hyprctl clients` when the window is open
 # fix download dialogs going off screen
-windowrulev2=size 75%,75%,class:firefox,floating:1
-windowrulev2=center,class:firefox,floating:1
+windowrule=size 75%,75%,class:firefox,floating:1
+windowrule=center,class:firefox,floating:1
 
 # float polkit window in center
-windowrulev2=float,class:lxqt-policykit-agent
-windowrulev2=center,class:lxqt-policykit-agent
+windowrule=float,class:lxqt-policykit-agent
+windowrule=center,class:lxqt-policykit-agent
 
 # float bluetooth window in center
-windowrulev2=float,class:.blueman-*
-windowrulev2=size 75%,75%,class:.blueman-*
-windowrulev2=center,class:.blueman-*
+windowrule=float,class:.blueman-*
+windowrule=size 75%,75%,class:.blueman-*
+windowrule=center,class:.blueman-*
 
 # float and center network manager
-windowrulev2=float,class:nm-connection-editor
-windowrulev2=size 75%,75%,class:nm-connection-editor
-windowrulev2=center,class:nm-connection-editor
+windowrule=float,class:nm-connection-editor
+windowrule=size 75%,75%,class:nm-connection-editor
+windowrule=center,class:nm-connection-editor
 
 # workspace rules
 # ref: https://wiki.hyprland.org/Configuring/Workspace-Rules/
