fix(waybar): Handle 'Not charging' state
- When battery is in 'Not charging' state, battery icon dissapeared in
  waybar
- To fix this, use `discharging` icons for `plugged` state

--- a/dotfiles/.config/waybar/config.jsonc
+++ b/dotfiles/.config/waybar/config.jsonc
@@ -62,6 +62,18 @@
     "battery": {
         "format": "{icon}",
         "format-icons": {
+            "plugged": [
+                "󰁺",
+                "󰁺",
+                "󰁼",
+                "󰁽",
+                "󰁾",
+                "󰁾",
+                "󰂀",
+                "󰂀",
+                "󰂀",
+                "󰁹"
+            ],
             "discharging": [
                 "󰁺",
                 "󰁺",
