fix(hyprland): Disable border for single window
- Disable borders when only 1 window is present on a workspace

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -164,6 +164,9 @@ windowrule=float,class:nm-connection-editor
 windowrule=size 75%,75%,class:nm-connection-editor
 windowrule=center,class:nm-connection-editor
 
+# disable border for single window
+windowrule = noborder, onworkspace:w[t1]
+
 # workspace rules
 # ref: https://wiki.hyprland.org/Configuring/Workspace-Rules/
 # gaps and borders for windows in scrachpad
