fix(waybar)!: Remove volume level & increase padding for wireplumber

--- a/dotfiles/.config/waybar/config.jsonc
+++ b/dotfiles/.config/waybar/config.jsonc
@@ -50,8 +50,8 @@
         "on-click-right": "easyeffects",
         "on-scroll-up": "",
         "on-scroll-down": "",
-        "format": "{volume}% {icon}",
-        "format-muted": "Mute ",
+        "format": "{icon}",
+        "format-muted": "",
         "format-icons": [
             "",
             "",
