feat!: Migrate from firefox -> zen browser

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -18,7 +18,7 @@ exec-once = ~/.config/scripts/battery_notifier.sh
 exec-shutdown = pgrep -f 'battery_notifier|periodic_random_wallpaper' | xargs kill 2>/dev/null
 
 # autostart apps
-exec-once = [workspace 1 silent] firefox
+exec-once = [workspace 1 silent] zen
 exec-once = [workspace 2 silent] kitty
 
 general {
@@ -146,10 +146,6 @@ bind = SUPER SHIFT, p, exec, grimblast --notify copysave area
 
 # for rules ref: https://wiki.hyprland.org/Configuring/Window-Rules/#rules
 # for window class, names, etc. run `hyprctl clients` when the window is open
-# fix download dialogs going off screen
-windowrule=size 75%,75%,class:firefox,floating:1
-windowrule=center,class:firefox,floating:1
-
 # float polkit window in center
 windowrule=float,class:lxqt-policykit-agent
 windowrule=center,class:lxqt-policykit-agent
