fix(hyprland): Change rofi bind for faster startup

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -92,7 +92,8 @@ $mainMod = SUPER
 
 # useful shortcuts
 bind = $mainMod, Q, killactive,
-bind = $mainMod, F, exec, rofi -show drun -show-icons
+# for slow startup fix, ref: https://github.com/davatorium/rofi/issues/1222#issuecomment-727157685
+bind = $mainMod, F, exec, rofi -show drun -show-icons -drun-use-desktop-cache
 bind = $mainMod, E, exec, nautilus
 bind = $mainMod, M, fullscreen, 0
 
