feat!: Migrate to Arch linux
- Move away from nixos as it was causing problems for development due to
  lack of support for executing linked binaries
- This is specifically problematic in case of python & desktop development
- Nixos documentation for core concepts is either lacking or very obtuse

BREAKING: This config is no longer applicable for nixos & has been
migrated to use Arch-specific constructs

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -3,7 +3,7 @@ monitor=,preferred,auto,auto
 env = XCURSOR_SIZE, 24
 
 # top bar, notification daemon, etc.
-exec-once = systemctl --user start polkit-gnome-authentication-agent-1
+exec-once = systemctl --user start autostart-polkit-gnome
 exec-once = hyprctl setcursor 'Bibata-Modern-Ice' 24
 exec-once = hyprpaper
 exec-once = ~/.config/scripts/periodic_random_wallpaper.sh
@@ -18,7 +18,7 @@ exec-once = ~/.config/scripts/battery_notifier.sh
 exec-shutdown = pgrep -f 'battery_notifier|periodic_random_wallpaper' | xargs kill 2>/dev/null
 
 # autostart apps
-exec-once = [workspace 1 silent] zen
+exec-once = [workspace 1 silent] zen-browser
 exec-once = [workspace 2 silent] kitty
 
 general {
@@ -93,7 +93,7 @@ $mainMod = SUPER
 # useful shortcuts
 bind = $mainMod, Q, killactive,
 # for slow startup fix, ref: https://github.com/davatorium/rofi/issues/1222#issuecomment-727157685
-bind = $mainMod, F, exec, rofi -show drun -show-icons -drun-use-desktop-cache
+bind = $mainMod, F, exec, rofi -show drun -show-icons
 bind = $mainMod, E, exec, nautilus
 bind = $mainMod, M, fullscreen, 0
 
