feat(hyprland): Set dark theme & icon theme through gsettings
- Install `gsettings-desktop-schemas` for gsettings cli
- Set dark color scheme using `prefer-dark`
- Set papirus (dark) as icon theme
- Set bibata (modern ice) as gtk cursor
- Set adwaita as gtk theme

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -10,6 +10,10 @@ exec-once = ~/.config/scripts/periodic_random_wallpaper.sh
 exec-once = hyprlock
 exec-once = hypridle
 exec-once = dunst
+exec-once = gsettings set org.gnome.desktop.interface gtk-theme 'Adwaita'
+exec-once = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
+exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
+exec-once = gsettings set org.gnome.desktop.interface icon-theme 'Papirus-Dark'
 exec-once = blueman-applet
 exec-once = nm-applet --show-indicator
 exec-once = easyeffects --gapplication-service
