--- a/dotfiles/.config/hypr/hyprlock.conf
+++ b/dotfiles/.config/hypr/hyprlock.conf
@@ -1,9 +1,8 @@
 # ref: https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/
 
 general {
-    grace = 0
     hide_cursor = true
-    immediate_render = true
+    immediate_render = false
 }
 
 background {
