fix(hyprland): Run zen browser through flatpak

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -22,7 +22,7 @@ exec-once = ~/.config/scripts/battery_notifier.sh
 exec-shutdown = pgrep -f 'battery_notifier|periodic_random_wallpaper' | xargs kill 2>/dev/null
 
 # autostart apps
-exec-once = [workspace 1 silent] zen-browser
+exec-once = [workspace 1 silent] flatpak run app.zen_browser.zen
 exec-once = [workspace 2 silent] kitty
 
 general {
