fix(hyprland): Fix broken windowrules after system upgrade

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -152,13 +152,13 @@ windowrule=float,class:lxqt-policykit-agent
 windowrule=center,class:lxqt-policykit-agent
 
 # float bluetooth window in center
-windowrule=float,class:.blueman-*
-windowrule=size 75%,75%,class:.blueman-*
-windowrule=center,class:.blueman-*
+windowrule=float,class:blueman-manager
+windowrule=size 75% 75%,class:blueman-manager
+windowrule=center,class:blueman-manager
 
 # float and center network manager
 windowrule=float,class:nm-connection-editor
-windowrule=size 75%,75%,class:nm-connection-editor
+windowrule=size 75% 75%,class:nm-connection-editor
 windowrule=center,class:nm-connection-editor
 
 # disable border for single window
