feat(hyprland): Enable blur
- Set blur passes to 2
- Set blur mode to xray

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -56,7 +56,10 @@ input {
 
 decoration {
     blur {
-        enabled = false
+        enabled = true
+        passes = 2
+        new_optimizations = on
+        xray = true
     }
 
     shadow {
