fix(hyprland): Float & center easyeffects window
- Allow easyeffects window to take 90% of width & height

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -164,6 +164,11 @@ windowrule=float,class:nm-connection-editor
 windowrule=size 75% 75%,class:nm-connection-editor
 windowrule=center,class:nm-connection-editor
 
+# float and center easyeffects
+windowrule=float,class:.*easyeffects
+windowrule=size 90% 90%,class:.*easyeffects
+windowrule=center,class:.*easyeffects
+
 # disable border for single window
 windowrule = noborder, onworkspace:w[t1]
 
