feat(waybar): Overhaul top bar
- Focus look around blur, enable blur on waybar layer & popups (tray
  menus)
- Remove on-click hook that launched easyeffects as it is now present in
  tray
- Increase spacing between tray icons from 3->10
- Fix icons & styles, make button sizes uniform in right status cluster
- Remove unused colours

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -172,6 +172,11 @@ windowrule=center,class:.*easyeffects
 # disable border for single window
 windowrule = noborder, onworkspace:w[t1]
 
+# layer rules
+layerrule = ignorealpha, waybar
+layerrule = blur, waybar
+layerrule = blurpopups, waybar
+
 # workspace rules
 # ref: https://wiki.hyprland.org/Configuring/Workspace-Rules/
 # gaps and borders for windows in scrachpad
